--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
 
     <header>
+          <!-- Logo a la izquierda -->
+        <img src="/logo.png" alt="Logo del club Ultrazancada" class="logo-left">
+        
+       
         <h1>Resultados Carrera David Torrente 2024</h1>
-        <p>Organizado por el Club Ultrazancada</p>
+         <!-- Logo a la derecha -->
+        <img src="logo.png" alt="Logo del club Ultrazancada" class="logo-right">
     </header>
 
     <section>
