--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
           <!-- Logo a la izquierda -->
-        <img src="/logo.png" alt="Logo del club Ultrazancada" class="logo-left">
+        <img src="logo.png" alt="Logo del club Ultrazancada" class="logo-left">
         
        
         <h1>Resultados Carrera David Torrente 2024</h1>
