--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="logo.png" alt="Logo del club Ultrazancada" class="logo-left">
         
        
-        <h1>Resultados Carrera David Torrente 2024</h1>
+        <h1>Resultados Carrera David Torrence 2024</h1>
          <!-- Logo a la derecha -->
         <img src="logo.png" alt="Logo del club Ultrazancada" class="logo-right">
     </header>
